tests/baselines/localcopy/spliceTuples.errors.txt
tests/cases/compiler/spliceTuples.ts(4,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.
tests/cases/compiler/spliceTuples.ts(7,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.
tests/cases/compiler/spliceTuples.ts(7,17): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/compiler/spliceTuples.ts(12,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.
tests/cases/compiler/spliceTuples.ts(17,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.
tests/cases/compiler/spliceTuples.ts(20,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.
tests/cases/compiler/spliceTuples.ts(23,10): error TS2322: Type 'string | boolean' is not assignable to type 'string'.
  Type 'boolean' is not assignable to type 'string'.


==== tests/cases/compiler/spliceTuples.ts (7 errors) ====
    declare const sb: [string, boolean];
    
    let k1: [number, string, boolean];
    k1 = [1, ...sb];
             ~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    let k2: [number, string, boolean, number];
    k2 = [1, ...sb, 1];
             ~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
                    ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    
    declare const sb_: [string, ...boolean[]];
    
    let k3: [number, string, ...boolean[]];
    k3 = [1, ...sb_];
             ~~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    declare const sbb_: [string, boolean, ...boolean[]];
    
    let k4: [number, string, ...boolean[]];
    k4 = [1, ...sbb_];
             ~~~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    let k5: [number, string, boolean, ...boolean[]];
    k5 = [1, ...sbb_];
             ~~~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    let k6: [number, string, boolean, boolean, ...boolean[]];
    k6 = [1, ...sbb_];
             ~~~~~~~
!!! error TS2322: Type 'string | boolean' is not assignable to type 'string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    